--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,10 @@
-Flask==3.1.0
-Flask-SQLAlchemy==2.5.1
-psycopg2-binary==2.9.3
-tensorflow-cpu==2.12.0
-tensorflow-hub==0.16.1  
-tensorflow-io-gcs-filesystem==0.31.0  
-numpy==1.21.6
-pillow==11.1.0
-protobuf==5.29.3
-Jinja2==3.1.5
-Werkzeug==3.1.3
-requests==2.32.3
-h5py==3.12.1
-six==1.17.0
-absl-py==2.1.0
-termcolor==2.5.0
-gast==0.6.0
+Flask
+Flask-SQLAlchemy
+psycopg2-binary
+tensorflow-cpu
+tensorflow-hub 
+numpy
+pillow
+Jinja2
+Werkzeug
+requests
